; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/fs/puffs/h_dtfs/extr_dtfs_vnops.c_dtfs_node_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/fs/puffs/h_dtfs/extr_dtfs_vnops.c_dtfs_node_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.puffs_usermount = type { i32 }
%struct.puffs_cred = type { i32 }
%struct.puffs_node = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.dtfs_file = type { i32**, i64 }

@VREG = common dso_local global i64 0, align 8
@EISDIR = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@DTFS_BLOCKSIZE = common dso_local global i32 0, align 4
@DTFS_BLOCKSHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dtfs_node_read(%struct.puffs_usermount* %0, i8* %1, i32* %2, i64 %3, i64* %4, %struct.puffs_cred* %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.puffs_usermount*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64*, align 8
  %14 = alloca %struct.puffs_cred*, align 8
  %15 = alloca i32, align 4
  %16 = alloca %struct.puffs_node*, align 8
  %17 = alloca %struct.dtfs_file*, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i64, align 8
  store %struct.puffs_usermount* %0, %struct.puffs_usermount** %9, align 8
  store i8* %1, i8** %10, align 8
  store i32* %2, i32** %11, align 8
  store i64 %3, i64* %12, align 8
  store i64* %4, i64** %13, align 8
  store %struct.puffs_cred* %5, %struct.puffs_cred** %14, align 8
  store i32 %6, i32* %15, align 4
  %23 = load i8*, i8** %10, align 8
  %24 = bitcast i8* %23 to %struct.puffs_node*
  store %struct.puffs_node* %24, %struct.puffs_node** %16, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = call %struct.dtfs_file* @DTFS_CTOF(i8* %25)
  store %struct.dtfs_file* %26, %struct.dtfs_file** %17, align 8
  %27 = load %struct.puffs_node*, %struct.puffs_node** %16, align 8
  %28 = getelementptr inbounds %struct.puffs_node, %struct.puffs_node* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @VREG, align 8
  %32 = icmp ne i64 %30, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %7
  %34 = load i32, i32* @EISDIR, align 4
  store i32 %34, i32* %8, align 4
  br label %93

35:                                               ; preds = %7
  %36 = load i64*, i64** %13, align 8
  %37 = load i64, i64* %36, align 8
  %38 = load %struct.dtfs_file*, %struct.dtfs_file** %17, align 8
  %39 = getelementptr inbounds %struct.dtfs_file, %struct.dtfs_file* %38, i32 0, i32 1
  %40 = load i64, i64* %39, align 8
  %41 = load i64, i64* %12, align 8
  %42 = sub nsw i64 %40, %41
  %43 = call i64 @MIN(i64 %37, i64 %42)
  store i64 %43, i64* %18, align 8
  %44 = load i64, i64* %18, align 8
  %45 = icmp ult i64 %44, 0
  br i1 %45, label %46, label %48

46:                                               ; preds = %35
  %47 = load i32, i32* @EINVAL, align 4
  store i32 %47, i32* %8, align 4
  br label %93

48:                                               ; preds = %35
  %49 = load i32*, i32** %11, align 8
  store i32* %49, i32** %21, align 8
  %50 = load i64, i64* %18, align 8
  store i64 %50, i64* %19, align 8
  br label %51

51:                                               ; preds = %54, %48
  %52 = load i64, i64* %18, align 8
  %53 = icmp ugt i64 %52, 0
  br i1 %53, label %54, label %86

54:                                               ; preds = %51
  %55 = load i64, i64* %18, align 8
  %56 = load i64, i64* %12, align 8
  %57 = load i32, i32* @DTFS_BLOCKSIZE, align 4
  %58 = call i64 @BLOCKLEFT(i64 %56, i32 %57)
  %59 = call i64 @MIN(i64 %55, i64 %58)
  store i64 %59, i64* %22, align 8
  %60 = load %struct.dtfs_file*, %struct.dtfs_file** %17, align 8
  %61 = getelementptr inbounds %struct.dtfs_file, %struct.dtfs_file* %60, i32 0, i32 0
  %62 = load i32**, i32*** %61, align 8
  %63 = load i64, i64* %12, align 8
  %64 = load i32, i32* @DTFS_BLOCKSHIFT, align 4
  %65 = call i64 @BLOCKNUM(i64 %63, i32 %64)
  %66 = getelementptr inbounds i32*, i32** %62, i64 %65
  %67 = load i32*, i32** %66, align 8
  %68 = load i64, i64* %12, align 8
  %69 = load i32, i32* @DTFS_BLOCKSIZE, align 4
  %70 = call i32 @BLOCKOFF(i64 %68, i32 %69)
  %71 = sext i32 %70 to i64
  %72 = getelementptr inbounds i32, i32* %67, i64 %71
  store i32* %72, i32** %20, align 8
  %73 = load i32*, i32** %21, align 8
  %74 = load i32*, i32** %20, align 8
  %75 = load i64, i64* %22, align 8
  %76 = call i32 @memcpy(i32* %73, i32* %74, i64 %75)
  %77 = load i64, i64* %22, align 8
  %78 = load i64, i64* %12, align 8
  %79 = add i64 %78, %77
  store i64 %79, i64* %12, align 8
  %80 = load i64, i64* %22, align 8
  %81 = load i32*, i32** %21, align 8
  %82 = getelementptr inbounds i32, i32* %81, i64 %80
  store i32* %82, i32** %21, align 8
  %83 = load i64, i64* %22, align 8
  %84 = load i64, i64* %18, align 8
  %85 = sub i64 %84, %83
  store i64 %85, i64* %18, align 8
  br label %51

86:                                               ; preds = %51
  %87 = load i64, i64* %19, align 8
  %88 = load i64*, i64** %13, align 8
  %89 = load i64, i64* %88, align 8
  %90 = sub i64 %89, %87
  store i64 %90, i64* %88, align 8
  %91 = load %struct.puffs_node*, %struct.puffs_node** %16, align 8
  %92 = call i32 @dtfs_updatetimes(%struct.puffs_node* %91, i32 1, i32 0, i32 0)
  store i32 0, i32* %8, align 4
  br label %93

93:                                               ; preds = %86, %46, %33
  %94 = load i32, i32* %8, align 4
  ret i32 %94
}

declare dso_local %struct.dtfs_file* @DTFS_CTOF(i8*) #1

declare dso_local i64 @MIN(i64, i64) #1

declare dso_local i64 @BLOCKLEFT(i64, i32) #1

declare dso_local i64 @BLOCKNUM(i64, i32) #1

declare dso_local i32 @BLOCKOFF(i64, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #1

declare dso_local i32 @dtfs_updatetimes(%struct.puffs_node*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
